tela de login responsive 1900 + 1440

--- a/front/src/app/components/views/cadastrar/cadastrar.component.html
+++ b/front/src/app/components/views/cadastrar/cadastrar.component.html
@@ -1,8 +1,8 @@
 <div class ="cadastrar">
     <div class='wrap'>  
-        <mat-card class="login">
+        <mat-card>
             <mat-card-header>
-              <mat-card-title class="loginTitulo">Cadastrar</mat-card-title>
+              <mat-card-title class="cadastroTitulo">Cadastrar</mat-card-title>
             </mat-card-header>
             
             
