--- a/front/src/app/components/views/entrar/entrar.component.scss
+++ b/front/src/app/components/views/entrar/entrar.component.scss
@@ -37,6 +37,11 @@
         border-radius: 15px;
         border-style: 1px solid #ffa800;
       }
+      
+      .link1{
+        margin-bottom: 20%;
+        padding: 15px 0px 15px 0px;
+      }
     }
   }
 }
