--- a/front/src/app/components/views/entrar/entrar.component.html
+++ b/front/src/app/components/views/entrar/entrar.component.html
@@ -1,24 +1,27 @@
 <div class ="login">
     <div class='wrap'>  
         <mat-card class="loginCard">
-           <mat-card-content>
-     <form>
-        <img class="loginlogo" src="../../../../assets/logo4.png">
-        <mat-form-field class="loginInput">
-            <input matInput placeholder="Username"  name="username"  required>     
-            </mat-form-field>
+            <mat-card-content>
+            <form>
+                <img class="loginlogo" src="../../../../assets/logo4.png">
+                <mat-form-field class="loginInput">
+                    <input matInput placeholder="Nickname" required>     
+                </mat-form-field>
 
-        <mat-form-field class="loginInput">
-            <input matInput placeholder="Password"  type="password" name="password"  required> 
-        </mat-form-field>
-    </form>
+                <mat-form-field class="loginInput">
+                    <input matInput placeholder="Senha"  type="password" required> 
+                </mat-form-field>
+                </form>
 
-    </mat-card-content>
+            </mat-card-content>
 
-        <mat-card-actions>
-            <button class="loginButton" mat-raised-button >Entrar</button>
-        </mat-card-actions>
-    
-    </mat-card>
+            <mat-card-actions>
+                <button class="loginButton" mat-raised-button >Entrar</button><br>
+            </mat-card-actions>
+
+            <mat-card-actions>
+                <a class="link1" routerLink="cadastrar">Esqueceu a senha?</a>
+            </mat-card-actions>
+        </mat-card>
     </div>
 </div>
