--- a/front/src/app/components/views/cadastrar/cadastrar.component.html
+++ b/front/src/app/components/views/cadastrar/cadastrar.component.html
@@ -1,29 +1,12 @@
 <div class ="cadastrar">
     <div class='wrap'>  
-        <mat-card class="registerCard">
-            <mat-card-title class="registerTitle">Cadastrar</mat-card-title>
-            <mat-card-content>
-              <form>
-                <mat-form-field class="registrerInput">
-                  <input matInput placeholder="Nickname" required> 
-                </mat-form-field><br>
-
-                <mat-form-field class="registrerInput">
-                  <input matInput placeholder="Email" required> 
-                </mat-form-field><br>
-
-                <mat-form-field class="registrerInput">
-                  <input matInput placeholder="Senha" type="password" required> 
-                </mat-form-field><br>
-
-                <mat-form-field class="registrerInput">
-                  <input matInput placeholder="Repetir senha" type="password" required> 
-                </mat-form-field><br> 
-              </form>
-            </mat-card-content>      
-            
+        <mat-card>
+            <mat-card-header>
+              <mat-card-title class="cadastroTitulo">Cadastrar</mat-card-title>
+            </mat-card-header>
             <mat-card-actions>
-              <button  class="registerButton" mat-raised-button>REGISTRAR</button>
+              <button mat-button>REGISTRAR</button>
+              <button mat-button>CANCELAR</button>
             </mat-card-actions>
           </mat-card>
     </div>
