--- a/front/src/app/components/views/cadastrar/cadastrar.component.scss
+++ b/front/src/app/components/views/cadastrar/cadastrar.component.scss
@@ -10,7 +10,7 @@
     justify-content: space-around;
     padding: 10%;
 
-    .registerCard{
+    .registerCard {
       width: 400px;
       text-align: center;
       border-radius: 15px;
@@ -19,18 +19,17 @@
         margin-top: 10px;
         text-transform: uppercase;
         color: #ffa800;
-        //text-shadow: solid 10px;
         font-weight: 800;
         font-size: 3em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Arial;
       }
 
-      .registerInput{
+      .registerInput {
         width: 400px;
         font-size: 1.2em;
       }
-      
-      .registerButton{
+
+      .registerButton {
         padding: 12px;
         margin-bottom: 10px;
         margin-top: 5px;
