--- a/front/src/app/components/views/entrar/entrar.component.html
+++ b/front/src/app/components/views/entrar/entrar.component.html
@@ -12,18 +12,18 @@
                     <input matInput placeholder="Senha"  type="password" required> 
                 </mat-form-field>
                 </form>
-    </mat-card-content>
+            </mat-card-content>
 
         <mat-card-actions class="link1"> 
             <button class="loginButton" mat-raised-button >Entrar</button>
         </mat-card-actions>
 
         <mat-card-actions class="link1">
-            <a routerLink="cadastrar">Esqueceu a senha?</a>
+            <a routerLink='/cadastrar'>Esqueceu a senha?</a>
         </mat-card-actions>
 
         <mat-card-actions class="link1">
-          <p>Não tem uma conta?  <a routerLink="cadastrar">Cadastre-se</a> </p>  
+          <p>Não tem uma conta?  <a routerLink='/cadastrar'>Cadastre-se</a> </p>  
         </mat-card-actions>
         
     </mat-card>
