ajustando classes do cadastrar HTML

--- a/front/src/app/components/views/cadastrar/cadastrar.component.html
+++ b/front/src/app/components/views/cadastrar/cadastrar.component.html
@@ -4,19 +4,19 @@
             <mat-card-title class="registerTitle">Cadastrar</mat-card-title>
             <mat-card-content>
               <form>
-                <mat-form-field class="registrerInput">
+                <mat-form-field class="registerInput">
                   <input matInput placeholder="Nickname" required> 
                 </mat-form-field><br>
 
-                <mat-form-field class="registrerInput">
-                  <input matInput placeholder="Email" required> 
+                <mat-form-field class="registerInput">
+                  <input matInput placeholder="Email" id="email" required> 
                 </mat-form-field><br>
 
-                <mat-form-field class="registrerInput">
+                <mat-form-field class="registerInput">
                   <input matInput placeholder="Senha" type="password" required> 
                 </mat-form-field><br>
 
-                <mat-form-field class="registrerInput">
+                <mat-form-field class="registerInput">
                   <input matInput placeholder="Repetir senha" type="password" required> 
                 </mat-form-field><br> 
               </form>
