tela de cadastrar

--- a/front/src/app/components/views/cadastrar/cadastrar.component.scss
+++ b/front/src/app/components/views/cadastrar/cadastrar.component.scss
@@ -17,6 +17,7 @@
 
       .registerTitle {
         margin-top: 10px;
+        margin-bottom: 50px;
         text-transform: uppercase;
         color: #ffa800;
         font-weight: 800;
@@ -31,8 +32,7 @@
 
       .registerButton {
         padding: 12px;
-        margin-bottom: 10px;
-        margin-top: 5px;
+        margin: 10px 0 10px 0;
         background-color: #ffa800;
         color: white;
         font-family: "Arial";
