tela esquecer senha ajuste cadastro e login

--- a/front/src/app/components/views/cadastrar/cadastrar.component.html
+++ b/front/src/app/components/views/cadastrar/cadastrar.component.html
@@ -24,7 +24,7 @@
 
 
             <mat-card-actions>
-              <button class="registerButton" mat-raised-button >Cadastrar</button>
+              <button  routerLink="" class="registerButton" mat-raised-button >Cadastrar</button>
             </mat-card-actions>
           </mat-card>
     </div>
