--- a/front/src/app/components/views/entrar/entrar.component.html
+++ b/front/src/app/components/views/entrar/entrar.component.html
@@ -15,11 +15,11 @@
             </mat-card-content>
 
         <mat-card-actions class="link1"> 
-            <button class="loginButton" mat-raised-button >Entrar</button>
+            <button routerLink="" class="loginButton" mat-raised-button >Entrar</button>
         </mat-card-actions>
 
         <mat-card-actions class="link1">
-            <a routerLink='/cadastrar'>Esqueceu a senha?</a>
+            <a routerLink='/esquecer'>Esqueceu a senha?</a>
         </mat-card-actions>
 
         <mat-card-actions class="link1">
