adicionando informações no footer

--- a/front/src/app/components/template/footer/footer.component.html
+++ b/front/src/app/components/template/footer/footer.component.html
@@ -11,7 +11,7 @@
               </a>
       
       <!-- twitter button --> 
-              <a>  
+              <a  href= "https://twitter.com/conexaoplayhard" target="_blank">  
                   <span class="icone">
                   <fa-icon [icon]="faTwitter"></fa-icon></span>
               </a>
@@ -27,7 +27,7 @@
               </a>
       
       <!-- twitch tv button -->
-              <a>
+              <a href= "https://www.twitch.tv/vitiellolucas" target="_blank">
                  <span class="icone">  <fa-icon [icon]="faTwitch"></fa-icon></span>
               </a>
       
