routing dos components perfil e bag

--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -38,12 +38,12 @@
 
     <button mat-icon-button [mat-menu-trigger-for]="menu" ><mat-icon class="icone">more_vert </mat-icon></button>
     <mat-menu #menu="matMenu">
-        <button mat-menu-item>
+        <button mat-menu-item routerLink="/perfil">
             <mat-icon>perm_identity</mat-icon>
             <span>Perfil</span>
         </button>
 
-        <button mat-menu-item>
+        <button mat-menu-item routerLink="/bag">
             <mat-icon>shopping_bag</mat-icon>
             <span>Minha bolsa</span>
         </button>
