alterações visuais teste no header

--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -3,35 +3,35 @@
         
 <!-- home page button-->
         <a routerLink=''>
-            <mat-icon class="icone">  home </mat-icon>
+            <mat-icon class="icone">  home </mat-icon>&nbsp;
             <span class="titulo">Inicio</span>
         </a>
 
 <!-- entretenimento page button -->
         <a routerLink='entretenimento'>
-            <mat-icon class="icone">   local_fire_department</mat-icon>
+            <mat-icon class="icone">   local_fire_department</mat-icon>&nbsp;
             <span class="titulo">Entretenimento</span>
         </a>
 <!-- promoções page button -->
         <a routerLink='promocoes'>
-            <mat-icon class="icone">  loyalty </mat-icon>
+            <mat-icon class="icone">  loyalty </mat-icon>&nbsp;
             <span class="titulo">Promoções</span>
         </a>
 
 <!-- suporte button -->
     <a href="https://discord.gg/4TVqfZgdq5" target="_blank">
-        <mat-icon class="icone"> support_agent</mat-icon>
+        <mat-icon class="icone"> support_agent</mat-icon>&nbsp;
         <span class="titulo">Suporte</span>
     </a>
 
     
 <!-- Cadastrar / logar button -->
     <div>
-        <mat-icon class="icone">face</mat-icon>
+        <mat-icon class="icone">face</mat-icon>&nbsp;
     <a routerLink='cadastrar'>
         <span class="titulo">Cadastrar</span>
     </a>
-        <span class="titulo">/</span>
+        <span class="titulo">&nbsp;&nbsp; / &nbsp;&nbsp;</span>
     <a routerLink='entrar'>
         <span class="titulo">Entrar</span>
     </a>
