--- a/front/src/app/components/template/header/header.component.scss
+++ b/front/src/app/components/template/header/header.component.scss
@@ -25,6 +25,6 @@
     font-family: "Arial";
     font-weight: 300;
     margin-left: 5px;
-    text-transform: uppercase;
+    // text-transform: uppercase;
   }
 }
