--- a/front/src/app/components/views/home/home.component.scss
+++ b/front/src/app/components/views/home/home.component.scss
@@ -21,6 +21,7 @@
         .img2tela {
           height: 600px;
           margin-left: 8%;
+          margin-top: -20px;
         }
         .texto1 {
           font-family: "Arial";
