--- a/front/src/app/components/views/home/home.component.scss
+++ b/front/src/app/components/views/home/home.component.scss
@@ -307,7 +307,7 @@
     }
   }
 
-  @media (min-width: 1024px) {
+  @media (max-width: 1024px) {
     .tela1 {
       display: flex;
       margin-top: 5%;
