--- a/front/src/app/components/views/home/home.component.html
+++ b/front/src/app/components/views/home/home.component.html
@@ -1,11 +1,10 @@
 <div class="home">
     <div class="wrap">
-        <div class="tela1">
             <div>
             <img class="img1tela" src="../../../../assets/logo4.png">
             <p class="texto1">Faça &nbsp;agora &nbsp;o  </p>
             <p class="texto1">seu  &nbsp;<span class="palavraEspecial">cadastro</span> &nbsp;</p>
-            <button mat-raised-button routerLink="cadastrar" class="botaoCadastrar"> <mat-icon class="icone">face</mat-icon> Cadastrar</button>
+            <button mat-raised-button routerLink="cadastrar" class="botaoCadastrar"> Cadastrar</button>
             </div>
 
             <div>
@@ -13,7 +12,6 @@
             </div>
 
             <div>
-            <!-- <img src="../../../../assets/barraLaranja.png"> -->
             <h1>Compre seu</h1>
             <h3>Vips, Coins, Facções ou Corporações</h3>
             <div class="compras">
@@ -47,7 +45,7 @@
                 
             </div>
         </div>
-    </div>
+    
 </div>
 
 
