tentando deixar responsivo comp inicio

--- a/front/src/app/components/views/home/home.component.html
+++ b/front/src/app/components/views/home/home.component.html
@@ -2,8 +2,8 @@
     <div class="wrap">
             <div>
             <img class="img1tela" src="../../../../assets/logo4.png">
-            <p class="texto1">Faça &nbsp;agora &nbsp;o  </p>
-            <p class="texto1">seu  &nbsp;<span class="palavraEspecial">cadastro</span> &nbsp;</p>
+            <p>Faça &nbsp;agora &nbsp;o  </p>
+            <p>seu  &nbsp;<span class="palavraEspecial">cadastro</span> &nbsp;</p>
            <br> <button mat-raised-button routerLink="cadastrar" class="botaoCadastrar"> Cadastrar</button>
             </div>
 
