--- a/front/src/app/components/views/inicio/inicio.component.scss
+++ b/front/src/app/components/views/inicio/inicio.component.scss
@@ -1,11 +1,9 @@
 .home {
-  height: 91%;
-  background: url("../../../../assets/telaDeFundo.png") no-repeat center center
-    fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  height: 90vh;
+  background-image: url("../../../../assets/telaDeFundo.png");
   background-size: cover;
+  background-repeat: none;
+  background-position: center;
 
   .wrap {
     display: grid;
@@ -56,7 +54,7 @@
     .C {
       width: 100%;
       padding-top: 5%;
-      margin-left: 10%;
+      // margin-left: 10%;
       // text-align: center;
       h1 {
         color: white;
@@ -113,6 +111,19 @@
           border-radius: 15px;
           border-style: 1px solid #ffa800;
         }
+      }
+    }
+  }
+  @media screen and (max-width: 1440px) {
+    .wrap {
+      display: grid;
+      grid-template-columns: 50% 50%;
+
+      .A {
+        padding-top: 5%;
+      }
+      .B {
+        display: none;
       }
     }
   }
