correções visuais nos botoes etc

--- a/front/src/app/components/views/inicio/inicio.component.html
+++ b/front/src/app/components/views/inicio/inicio.component.html
@@ -17,25 +17,25 @@
             <h2>Vips, Coins, Facções ou Corporações</h2>
 
         <div class="wrapC">
-            <div>
+            <div class="wrapC2">
                 <img class="img" src="../../../../assets/v.png">
                 <h2 class="t1">Vip</h2>
                 <button mat-raised-button routerLink="promocoes" class="botao">Compre</button>
             </div> 
 
-            <div>
+            <div class="wrapC2">
                 <img class="img" src="../../../../assets/c.png">
                 <h2 class="t1">Coins</h2>
                 <button mat-raised-button routerLink="promocoes" class="botao">Compre</button>
             </div> 
 
-            <div>
+            <div class="wrapC2">
                 <img class="img" src="../../../../assets/f.png">
                 <h2 class="t1">Fac</h2>
                 <button mat-raised-button routerLink="promocoes" class="botao">Compre</button>
             </div> 
 
-            <div>
+            <div class="wrapC2">
                 <img class="img" src="../../../../assets/c.png">
                 <h2 class="t1">Corp</h2>
                 <button mat-raised-button routerLink="promocoes" class="botao">Compre</button>
