--- a/front/src/app/components/views/inicio/inicio.component.scss
+++ b/front/src/app/components/views/inicio/inicio.component.scss
@@ -131,16 +131,30 @@
       .C {
         .wrapC {
           padding-left: 5rem;
-          img {
-            height: 50%;
-          }
-          h2 {
-            color: white;
-            font-size: 2.5em;
-            font-weight: 600;
-            font-family: "Arial";
-            text-transform: uppercase;
-            margin-top: 5px;
+          .wrapC2 {
+            img {
+              height: 45%;
+            }
+            h2 {
+              color: white;
+              font-size: 2.5em;
+              font-weight: 600;
+              font-family: "Arial";
+              text-transform: uppercase;
+              margin-top: 5px;
+            }
+            button {
+              height: 25%;
+              margin-left: 12px;
+              background-color: #ffa800;
+              color: white;
+              font-size: 1.5em;
+              font-weight: 400;
+              text-transform: uppercase;
+              border-radius: 10px;
+              border-style: 1px solid #ffa800;
+              padding: 8px 12px 8px 12px;
+            }
           }
         }
       }
