--- a/front/src/app/components/template/header/header.component.scss
+++ b/front/src/app/components/template/header/header.component.scss
@@ -27,4 +27,9 @@
     margin-left: 5px;
     // text-transform: uppercase;
   }
+  @media screen and (max-width: 1440px) {
+    // .titulo {
+    //   display: none;
+    // }
+  }
 }
