--- a/front/src/app/components/views/inicio/inicio.component.scss
+++ b/front/src/app/components/views/inicio/inicio.component.scss
@@ -78,11 +78,13 @@
 
       .wrapC {
         display: flex;
+        // justify-content: flex-end;
         justify-content: space-around;
         margin-right: 15%;
         // margin-left: 1%;
         margin-top: 5%;
-        padding-left: 2rem;
+        // padding-left: 2rem;
+        margin-left: 0;
         .wrapC2 {
           display: flex;
           flex-direction: column;
@@ -119,7 +121,7 @@
   @media screen and (max-width: 1440px) {
     .wrap {
       display: grid;
-      grid-template-columns: 50% 50%;
+      grid-template-columns: 40% 60%;
 
       .A {
         padding-top: 5%;
