--- a/front/src/app/components/views/inicio/inicio.component.scss
+++ b/front/src/app/components/views/inicio/inicio.component.scss
@@ -42,6 +42,8 @@
     }
 
     .B {
+      display: flex;
+      flex-direction: column;
       width: 100%;
       padding-top: 30%;
       text-align: end;
